fixed overlapping components

--- a/src/sections/about-us/aboutusstyle.module.css
+++ b/src/sections/about-us/aboutusstyle.module.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
 }
 .aboutus {
+  z-index: 1;
   font-weight: 700;
   grid-column: span 6;
   font-size: 45px;
@@ -28,10 +29,11 @@ body {
   text-align: justify;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
+  z-index: 1;
 }
 .dark {
   color: #e9e7e9;
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
 }
 .clubimg {
   grid-column: span 6;
@@ -54,7 +56,7 @@ body {
   border-radius: 50%;
   border: 17px solid #efca53;
   box-sizing: border-box;
-  z-index: 0;
+  z-index: 1;
 }
 .dot {
   position: absolute;
